defaultTasks 'clean', 'test', 'aggregate'

repositories {
    mavenCentral()
    mavenLocal()
}

buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "net.serenity-bdd:serenity-gradle-plugin:4.0.15"
    }
}


apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: "net.serenity-bdd.serenity-gradle-plugin"

sourceCompatibility = 16
targetCompatibility = 16

ext {
    slf4jVersion = '1.7.7'
    serenityCoreVersion = '4.0.15'
    junitVersion = '5.10.0'
    assertJVersion = '3.23.1'
    lombokVersion = '1.18.24'
    logbackVersion = '1.2.11'
    junit_platform_launcher_version="1.10.0"
    cucumber_junit_platform_engine_version="7.14.0"
    junit_platform_suite_version="1.10.0"
}

dependencies {
    dependencies {
        testImplementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
                "net.serenity-bdd:serenity-cucumber:${serenityCoreVersion}",
                "net.serenity-bdd:serenity-junit5:${serenityCoreVersion}",
                "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
                "net.serenity-bdd:serenity-screenplay-webdriver:${serenityCoreVersion}",
                "net.serenity-bdd:serenity-ensure:${serenityCoreVersion}",
                "org.junit.jupiter:junit-jupiter-api:${junitVersion}",
                "org.junit.jupiter:junit-jupiter-engine:${junitVersion}",
                "org.junit.platform:junit-platform-launcher:${junit_platform_launcher_version}",
                "io.cucumber:cucumber-junit-platform-engine:${cucumber_junit_platform_engine_version}",
                "org.junit.platform:junit-platform-suite:${junit_platform_suite_version}",
                "org.junit.vintage:junit-vintage-engine:${junitVersion}",
                "org.assertj:assertj-core:${assertJVersion}",
                "org.projectlombok:lombok:${lombokVersion}",
                "ch.qos.logback:logback-classic:${logbackVersion}"




        implementation("net.serenity-bdd:serenity-screenplay-rest:${serenityCoreVersion}")




        // https://mvnrepository.com/artifact/net.serenity-bdd/serenity-reports
        implementation group: 'net.serenity-bdd', name: 'serenity-reports', version: '4.0.19'

        implementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '4.0.19'
        // https://mvnrepository.com/artifact/com.github.javafaker/javafaker
        implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'


    }
}

test {
    useJUnitPlatform()
    testLogging.showStandardStreams = true
    systemProperties System.getProperties()
}

gradle.startParameter.continueOnFailure = true

test.finalizedBy(aggregate)
